--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&family=Merriweather&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Posted Notes</title>
+    <title>NFTFANS NEWS</title>
     <style>
         body {
             background-color: #000000;
