--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NFTFANS NEWS</title>
+    <link rel="icon" href="https://i.ibb.co/vxNxRkD/newspaper.png" type="image/png">
     <style>
         body {
             background-color: #000000;
